Added all sections / some styling

--- a/site/index.html
+++ b/site/index.html
@@ -1,8 +1,8 @@
 ---
 metatitle: NONE
-metadesc: "Blank Meta Description"
-title: Empty Title
-subtitle: "Empty Subtitle"
+metadesc: "Tanner Woodworth is a front end web developer based in Pittsburgh, PA."
+title: Tanner Woodworth
+subtitle: "Front end web developer"
 layout: page_default
 ---
 <!-- SECTION: Introduction -->
@@ -13,33 +13,64 @@ layout: page_default
 </div>
 
 <!-- SECTION: Bio -->
-<!-- <div id="bio" class="section -image-half">
+<div id="bio" class="section -image-half">
   <div class="-left">
-    <h2 class="h2 -pre">Bio</h2>
+    <div class="text-container">
+      <h2 class="h2 -pre">Bio</h2>
+      <p>I have attended school at Pittsburgh Technical College where I received my Associate in Science Degree in Multimedia Technologies with a concentration in Web Design and Development. While attending school at PTC, I had received numerous awards for academic achievements as well as a Best in Show award for the Spring 2016 Portfolio show, and a 1st place Graphic Design Scholarship award.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem porro quod, vero asperiores velit? Ipsa at vero dolor in temporibus quo expedita, odit incidunt ea repellat, porro sint dolorum quos.</p>
+    </div>
   </div>
   <div class="-right">
     
   </div>
 
-</div> -->
+</div>
 
 <!-- SECTION: Blurbs -->
 
-<!--   <div id="blurbs" class="section col-group">
+  <div id="blurbs" class="section col-group">
+    <div class="container">
 
-    <div class="col-4">
-      <strong>Title</strong>
-      <p>Text, text, text...</p>
+      <div class="col-4 blurb">
+        <h3 class="h3 -pre">What I'm reading</h3>
+        <p>Soft Skills: The Software Developer’s Life Manual, Atomic Design</p>
+      </div>
+
+      <div class="col-4 blurb">
+        <h3 class="h3 -pre">What I'm learning</h3>
+        <p>AngularJS, Vue JS, Go, R, D3 Charts, OpenGL, WordPress, how to hum and whistle simultaneously</p>
+      </div>
+
+      <div class="col-4 blurb">
+        <h3 class="h3 -pre">What I'm passionate about</h3>
+        <p>Accessibility, semantic code, BEM, design, podcasting, something else</p>
+      </div>
     </div>
+  </div>
 
-    <div class="col-4">
-      <strong>Title</strong>
-      <p>Text, text, text...</p>
+  <!-- SECTION: Work -->
+
+  <div id="work" class="section col-group">
+    <div class="container">
+      <div class="col-8">
+        <div class="text-container">
+          <h2 class="h2 -pre">Work</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat libero, cupiditate iste, quos nemo porro consequuntur. Accusamus at ullam, consequatur mollitia delectus quas error perferendis quod a cumque. Accusantium, maiores.</p>
+        </div>
+      </div>
     </div>
+  </div>
 
-    <div class="col-4">
-      <strong>Title</strong>
-      <p>Text, text, text...</p>
+  <!-- SECTION: Contact -->
+
+  <div id="contact" class="section col-group">
+    <div class="container">
+      <div class="col-8">
+        <div class="text-container">
+          <h2 class="h2 -pre">Contact</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat libero, cupiditate iste, quos nemo porro consequuntur. Accusamus at ullam, consequatur mollitia delectus quas error perferendis quod a cumque. Accusantium, maiores.</p>
+        </div>
+      </div>
     </div>
-
-  </div> -->
+  </div>
