--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,5 @@
 ---
-metatitle: NONE
+metatitle: Tanner Woodworth | Front end web developer
 metadesc: "Tanner Woodworth is a front end web developer based in Pittsburgh, PA."
 title: Tanner Woodworth
 subtitle: "Front end web developer"
@@ -7,70 +7,79 @@ layout: page_default
 ---
 <!-- SECTION: Introduction -->
 <div class="container">
-  <div id="intro" class="section -quote col-8">
-    <strong>Hello! My name is Tanner Woodworth and I am a front end web developer based in Pittsburgh, Pennsylvania. I love <a href="#">coding</a>, <a href="#">design</a>, and <a href="#">writing</a>.</strong>
-  </div>
+	<div id="intro" class="section -quote col-8">
+		<strong>Hello! My name is Tanner Woodworth and I am a front end web developer based in Pittsburgh, Pennsylvania. I love <a href="#">coding</a>, <a href="#">design</a>, and <a href="#">writing</a>.</strong>
+	</div>
 </div>
 
 <!-- SECTION: Bio -->
 <div id="bio" class="section -image-half">
-  <div class="-left">
-    <div class="text-container">
-      <h2 class="h2 -pre">Bio</h2>
-      <p>I have attended school at Pittsburgh Technical College where I received my Associate in Science Degree in Multimedia Technologies with a concentration in Web Design and Development. While attending school at PTC, I had received numerous awards for academic achievements as well as a Best in Show award for the Spring 2016 Portfolio show, and a 1st place Graphic Design Scholarship award.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem porro quod, vero asperiores velit? Ipsa at vero dolor in temporibus quo expedita, odit incidunt ea repellat, porro sint dolorum quos.</p>
-    </div>
-  </div>
-  <div class="-right">
-    
-  </div>
+	<div class="-left">
+		<div class="text-container">
+			<h2 class="h2 -pre">Bio</h2>
+			<p>I have attended school at Pittsburgh Technical College where I received my Associate in Science Degree in Multimedia Technologies with a concentration in Web Design and Development. While attending school at PTC, I had received numerous awards for academic achievements as well as a Best in Show award for the Spring 2016 Portfolio show, and a 1st place Graphic Design Scholarship award.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem porro quod, vero asperiores velit? Ipsa at vero dolor in temporibus quo expedita, odit incidunt ea repellat, porro sint dolorum quos.</p>
+		</div>
+	</div>
+	<div class="-right">
+		
+	</div>
 
 </div>
 
 <!-- SECTION: Blurbs -->
 
-  <div id="blurbs" class="section col-group">
-    <div class="container">
+	<div id="blurbs" class="section col-group">
+		<div class="container">
 
-      <div class="col-4 blurb">
-        <h3 class="h3 -pre">What I'm reading</h3>
-        <p>Soft Skills: The Software Developer’s Life Manual, Atomic Design</p>
-      </div>
+			<div class="col-4 blurb">
+				<h3 class="h3 -pre">What I'm reading</h3>
+				<p>Soft Skills: The Software Developer’s Life Manual, Atomic Design</p>
+			</div>
 
-      <div class="col-4 blurb">
-        <h3 class="h3 -pre">What I'm learning</h3>
-        <p>AngularJS, Vue JS, Go, R, D3 Charts, OpenGL, WordPress, how to hum and whistle simultaneously</p>
-      </div>
+			<div class="col-4 blurb">
+				<h3 class="h3 -pre">What I'm learning</h3>
+				<p>AngularJS, Vue JS, Go, R, D3 Charts, OpenGL, WordPress, how to hum and whistle simultaneously</p>
+			</div>
 
-      <div class="col-4 blurb">
-        <h3 class="h3 -pre">What I'm passionate about</h3>
-        <p>Accessibility, semantic code, BEM, design, podcasting, something else</p>
-      </div>
-    </div>
-  </div>
+			<div class="col-4 blurb">
+				<h3 class="h3 -pre">What I'm passionate about</h3>
+				<p>Accessibility, semantic code, BEM, design, podcasting, something else</p>
+			</div>
+		</div>
+	</div>
 
-  <!-- SECTION: Work -->
+	<!-- SECTION: Work -->
 
-  <div id="work" class="section col-group">
-    <div class="container">
-      <div class="col-8">
-        <div class="text-container">
-          <h2 class="h2 -pre">Work</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat libero, cupiditate iste, quos nemo porro consequuntur. Accusamus at ullam, consequatur mollitia delectus quas error perferendis quod a cumque. Accusantium, maiores.</p>
-        </div>
-      </div>
-    </div>
-  </div>
+	<div id="work" class="section col-group">
+		<div class="container">
+			<div class="col-8">
+				<div class="text-container">
+					<h2 class="h2 -pre">Work</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat libero, cupiditate iste, quos nemo porro consequuntur. Accusamus at ullam, consequatur mollitia delectus quas error perferendis quod a cumque. Accusantium, maiores.</p>
+				</div>
+				<div class="projects-container">
+					<div class="project">
+						<div class="project-info">
+							<strong class="project-title">Project Title</strong>
+							<p class="project-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis accusantium quo officiis eum.</p>
+							<img src="/images/project-ph.gif" alt="Project Alt Text" class="project-thumb">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
-  <!-- SECTION: Contact -->
+	<!-- SECTION: Contact -->
 
-  <div id="contact" class="section col-group">
-    <div class="container">
-      <div class="col-8">
-        <div class="text-container">
-          <h2 class="h2 -pre">Contact</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat libero, cupiditate iste, quos nemo porro consequuntur. Accusamus at ullam, consequatur mollitia delectus quas error perferendis quod a cumque. Accusantium, maiores.</p>
-        </div>
-      </div>
-    </div>
-  </div>
+	<div id="contact" class="section col-group">
+		<div class="container">
+			<div class="col-8">
+				<div class="text-container">
+					<h2 class="h2 -pre">Contact</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat libero, cupiditate iste, quos nemo porro consequuntur. Accusamus at ullam, consequatur mollitia delectus quas error perferendis quod a cumque. Accusantium, maiores.</p>
+				</div>
+			</div>
+		</div>
+	</div>
